# refactoring-to-rust

./: .clang-format  .gitignore  Cargo.toml  README.md  rustfmt.toml
chapter-01/listing_01/: main.py
chapter-01/listing_01_python_csv/: input.py  main.py
chapter-01/listing_02/: README.md
chapter-01/listing_02_rust_csv/: Cargo.toml
chapter-01/listing_03_java_map/: Main.java
chapter-01/listing_04/: Cargo.toml
chapter-01/listing_04_rust_map/: Cargo.toml
chapter-02/listing_01_hello_world/: Cargo.toml
chapter-02/listing_02_artwork/: Cargo.toml
chapter-02/listing_03_admiration/: Cargo.toml
chapter-02/listing_04_two_arts/: Cargo.toml
chapter-02/listing_05_double_admiration_NO_COMPILE/: Cargo.toml
chapter-02/listing_09_double_admiration_ref/: Cargo.toml
chapter-02/listing_10_mutability/: Cargo.toml
chapter-02/listing_11_view_counter/: Cargo.toml
chapter-02/listing_12_use_after_move_NO_COMPILE/: Cargo.toml
chapter-02/listing_13_hanging_ref_NO_COMPILE/: Cargo.toml
chapter-02/listing_14_read_only_memory/: main.c
chapter-02/listing_15_large_string_py/: main.py
chapter-02/listing_16_large_string_rs/: Cargo.toml
chapter-02/listing_17_large_string_prealloc/: Cargo.toml
chapter-02/listing_18_string_to_ref/: Cargo.toml
chapter-02/listing_19_ref_to_string/: Cargo.toml
chapter-02/listing_21_fizz_buzz_basic/: Cargo.toml
chapter-02/listing_24_fizz_buzz_enum_basic/: Cargo.toml
chapter-02/listing_25_fizz_buzz_enum/: Cargo.toml
chapter-02/listing_27_fizz_buzz_result/: Cargo.toml
chapter-02/listing_29_unit_type_mismatch_NO_COMPILE/: Cargo.toml
chapter-02/listing_30_unit_return_explicit/: Cargo.toml
chapter-02/listing_32_custom_error/: Cargo.toml
chapter-02/listing_34_question_mark/: Cargo.toml
chapter-02/listing_35_username_validation/: Cargo.toml
chapter-02/listing_36_err_panic/: Cargo.toml
chapter-02/listing_37_err_unwrap/: Cargo.toml
chapter-03/listing_01_unsafe_iteration/: Cargo.toml
chapter-03/listing_02_c_calculator/: main.c
chapter-03/listing_04_beginning_ffi/: Cargo.toml
chapter-03/listing_05_c_code_for_ffi/: bin  calculator.c
chapter-03/listing_06_most_basic_ffi/: Cargo.toml
chapter-03/listing_08_ffi_with_evaluate/: Cargo.toml
chapter-03/listing_10_hello_world_display/: Cargo.toml
chapter-03/listing_13_full_calculator/: Cargo.toml  main.c
chapter-04/: .gitignore
chapter-04/listing_01_module_starter/: Cargo.toml
chapter-04/listing_02_build_script_hello/: .gitignore  Cargo.toml  build.rs
chapter-04/listing_03_build_script_language/: Cargo.toml  build.rs
chapter-04/listing_04_build_script_include/: Cargo.toml
chapter-04/listing_05_build_script_bindings/: Cargo.toml  build.rs  run
chapter-04/listing_06_build_script_ngx_prefix/: .gitignore  Cargo.toml  build.rs
chapter-04/listing_07_nginx_handler/: Cargo.toml  run
chapter-04/listing_08_request_body/: Cargo.toml  run
chapter-04/listing_08_request_body/module/: config
chapter-04/listing_08_request_body/src/: lib.rs
chapter-04/listing_09_print_vec/: Cargo.toml
chapter-04/listing_10_print_vec_fn/: Cargo.toml
chapter-04/listing_11_print_vec_fn_dangling_NO_COMPILE/: Cargo.toml
chapter-04/listing_12_print_vec_fn_ref_NO_COMPILE/: Cargo.toml
chapter-04/listing_13_print_vec_fn_lifetimes/: Cargo.toml
chapter-04/listing_14_calculate/: Cargo.toml
chapter-04/listing_15_evaluate_expression/: Cargo.toml  build.rs  run
chapter-04/listing_15_evaluate_expression/src/: lib.rs
chapter-04/listing_16_full_handler/: Cargo.toml  err  run
chapter-05/listing_01_greeter_start/: Cargo.toml
chapter-05/listing_01_nginx_sys/: Cargo.toml  build.rs
chapter-05/listing_02_greeter_mod_NO_COMPILE/: Cargo.toml
chapter-05/listing_02_handler/: Cargo.toml
chapter-05/listing_02_handler/src/: lib.rs
chapter-05/listing_03_foo/: Cargo.toml  run
chapter-05/listing_03_foo/module/: ngx_http_calculator.c
chapter-05/listing_03_foo/ngx-run/: nginx.conf
chapter-05/listing_03_foo/src/: lib.rs
chapter-05/listing_03_greeter_use/: Cargo.toml
chapter-05/listing_04_greeter_pub/: Cargo.toml
chapter-05/listing_04_nginx/: Cargo.toml
chapter-05/listing_05_greeter_mod_files/: Cargo.toml
chapter-05/listing_05_stringparser_NO_COMPILE/: Cargo.toml
chapter-05/listing_06_day_kind/: Cargo.toml
chapter-05/listing_06_stringparser/: Cargo.toml
chapter-05/listing_07_nginx_easy_body/: Cargo.toml
chapter-05/listing_07_nginx_easy_body/src/: lib.rs
chapter-05/listing_07_paths/: Cargo.toml
chapter-05/listing_08_already_seen_bodies/: Cargo.toml
chapter-05/listing_08_already_seen_bodies/src/: lib.rs
chapter-05/listing_08_libsnack/: Cargo.toml
chapter-05/listing_09_already_seen_bodies_with_lifetimes_NO_COMPILE/: Cargo.toml
chapter-05/listing_09_already_seen_bodies_with_lifetimes_NO_COMPILE/src/: lib.rs
chapter-05/listing_09_libsnack_lifecycle_absolute/: Cargo.toml
chapter-05/listing_10_already_seen_bodies_with_strings/: Cargo.toml
chapter-05/listing_10_libsnack_lifecycle_relative/: Cargo.toml
chapter-05/listing_11_libsnack_lifecycle_use/: Cargo.toml
chapter-05/listing_11_paths/: Cargo.toml
chapter-05/listing_11_unsafe_pointer_wrapper/: Cargo.toml
chapter-05/listing_12_libsnack/: Cargo.toml
chapter-05/listing_12_unsafe_pointer_wrapper_typecast/: Cargo.toml
chapter-05/listing_13_greeter_day_kind_main/: Cargo.toml
chapter-08/: Cargo.toml  main-async.py  main-mult.py  main-single.py  main-thread.py  main.py  main2.py  main3.py  requirements.txt
chapter-08/listing_00_final/: Cargo.toml  main.py
chapter-08/listing_00_final/src/: lib.rs
chapter-08/listing_01_mandelbrot/: Cargo.toml
chapter-08/listing_01_mandelbrot/src/: main.rs
chapter-08/src/: lib.rs  main.rs
chapter-09/papers/: Cargo.toml  index.html
chapter-09/papers/papers-list/: package-lock.json  package.json  vite.config.js
chapter-09/papers/papers-list/src/: App.jsx  List.jsx
chapter-09/papers/src/: lib.rs
chapter-10/journal/book_search/: Cargo.toml
chapter-10/journal/book_search/src/: main.rs  main1.bak
script/: build  gen-workspace  reformat-all
(+194 files in other folders)
