# Auto generated with `./script/gen-workspace`

[workspace]
members = [
    "chapter-01/listing_02_rust_csv",
    "chapter-01/listing_04_rust_map",

    "chapter-02/listing_01_hello_world",
    "chapter-02/listing_02_artwork",
    "chapter-02/listing_03_admiration",
    "chapter-02/listing_04_two_arts",
#   "chapter-02/listing_05_double_admiration_NO_COMPILE",
    "chapter-02/listing_09_double_admiration_ref",
    "chapter-02/listing_10_mutability",
    "chapter-02/listing_11_view_counter",
#   "chapter-02/listing_12_use_after_move_NO_COMPILE",
#   "chapter-02/listing_13_hanging_ref_NO_COMPILE",
    "chapter-02/listing_16_large_string_rs",
    "chapter-02/listing_17_large_string_prealloc",
    "chapter-02/listing_18_string_to_ref",
    "chapter-02/listing_19_ref_to_string",
    "chapter-02/listing_21_fizz_buzz_basic",
    "chapter-02/listing_24_fizz_buzz_enum_basic",
    "chapter-02/listing_25_fizz_buzz_enum",
    "chapter-02/listing_27_fizz_buzz_result",
#   "chapter-02/listing_29_unit_type_mismatch_NO_COMPILE",
    "chapter-02/listing_30_unit_return_explicit",
    "chapter-02/listing_32_custom_error",
    "chapter-02/listing_34_question_mark",
    "chapter-02/listing_35_username_validation",
    "chapter-02/listing_36_err_panic",
    "chapter-02/listing_37_err_unwrap",

    "chapter-03/listing_01_unsafe_iteration",
    "chapter-03/listing_04_beginning_ffi",
    "chapter-03/listing_06_most_basic_ffi",
    "chapter-03/listing_08_ffi_with_evaluate",
    "chapter-03/listing_10_hello_world_display",
    "chapter-03/listing_13_full_calculator",

    "chapter-04/listing_01_module_starter",
    "chapter-04/listing_02_build_script_hello",
    "chapter-04/listing_03_build_script_language",
    "chapter-04/listing_04_build_script_include",
    "chapter-04/listing_05_build_script_bindings",
    "chapter-04/listing_06_build_script_ngx_prefix",
    "chapter-04/listing_07_nginx_handler",
    "chapter-04/listing_08_request_body",
    "chapter-04/listing_09_print_vec",
    "chapter-04/listing_10_print_vec_fn",
#   "chapter-04/listing_11_print_vec_fn_dangling_NO_COMPILE",
#   "chapter-04/listing_12_print_vec_fn_ref_NO_COMPILE",
    "chapter-04/listing_13_print_vec_fn_lifetimes",
    "chapter-04/listing_14_calculate",
    "chapter-04/listing_15_evaluate_expression",
    "chapter-04/listing_16_full_handler",

    "chapter-05/listing_01_greeter_start",
    "chapter-05/listing_02_greeter_mod",
    "chapter-05/listing_03_greeter_use",
    "chapter-05/listing_04_greeter_pub",
    "chapter-05/listing_05_greeter_mod_files",
    "chapter-05/listing_08_day_kind",
    "chapter-05/listing_11_paths",
    "chapter-05/listing_12_libsnack",
    "chapter-05/listing_13_libsnack_lifecycle_absolute",
    "chapter-05/listing_14_libsnack_lifecycle_relative",
    "chapter-05/listing_15_libsnack_lifecycle_use",
    "chapter-05/listing_16_greeter_day_kind_input",
    "chapter-05/listing_17_greeter_day_kind_main",
    "chapter-05/listing_18_greeter_day_kind_read_line",
    "chapter-05/listing_19_greeter_pub_use",
]
