[package]
name = "mandelbrot"
version = "0.1.0"
edition = "2021"

[lib]
name = "mandelbrot"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
num-complex = "0.4.4"

[dependencies.pyo3]
version = "0.20.0"
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
features = ["abi3-py38"]
