[package]
name = "chapter-05-listing-02"
version = "0.1.0"
authors = ["Lily Mara <lilymara@fastmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nginx-sys = { path = "../listing_01_nginx_sys", package = "chapter-05-listing-01" }
calculate = { path = "../../chapter-04/listing_14_calculate", package = "chapter-04-listing-14" }
