[package]
name = "chapter-05-listing-03"
version = "0.1.0"
authors = ["Lily Mara <lilymara@fastmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2"
nginx = { path = "../listing_20_minimum_handler_reexport", package = "chapter-05-listing-20" }
calculate = { path = "../../chapter-04/listing_14_calculate", package = "chapter-04-listing-14" }
