[package]
name = "chapter-05-listing-08"
version = "0.1.0"
authors = ["Lily Mara <lilymara@fastmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2"
nginx = { path = "../listing_07_nginx_easy_body", package = "chapter-05-listing-07" }
nginx-sys = { path = "../listing_01_nginx_sys", package = "chapter-05-listing-01" }
