[package]
name = "chapter-05-listing-09"
version = "0.1.0"
authors = ["Lily Mara <lilymara@fastmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2"
nginx = { path = "../listing_04_nginx", package = "chapter-05-listing-04" }
nginx-sys = { path = "../listing_01_nginx_sys", package = "chapter-05-listing-01" }
