[package]
name = "chapter-08-listing-00"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_async"
crate-type = ["cdylib"]

[dependencies]
serde_json = "1.0.68"
serde = { version = "1.0.130", features = ["derive"] }
pyo3 = { version = "0.14", features = ["extension-module"] }
pyo3-asyncio = { version = "0.14.1", features = ["tokio-runtime"] }
tokio = { version = "1.18.2", features = ["full"] }
