[package]
name = "papers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5.0"
# tokio = { version = "1", features = ["full"] }
serde-xml-rs = "0.6.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.37"
yew = "0.19.0"

[dev-dependencies]
tokio-test = "*"
